# mcp-inspector

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/mcp_inspector/: __init__.py  cli.py  parser.py  printer.py  proxy.py
tests/: test_parser.py  test_printer.py
