[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-inspector"
version = "0.1.0"
description = "A local proxy for inspecting agent-tool MCP traffic."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["mitmproxy", "rich", "typer[all]"]

[project.scripts]
mcp-inspector = "mcp_inspector.cli:app"

[project.urls]
Homepage = "https://github.com/manishrawal95/mcp-inspector"
Issues = "https://github.com/manishrawal95/mcp-inspector/issues"
